# gsplat-joy

./: .gitignore  README.md  image_fitting.py  setup.py
gsplat/: rendering.py
gsplat/cuda/: _backend.py  _torch_impl.py  _wrapper.py
gsplat/cuda/csrc/: CMakeLists.txt  CMakeLists.txt.bak  bindings.h  ext.cpp  isect_tiles.cu  rasterize_to_pixels_bwd.bak  rasterize_to_pixels_bwd.cu  rasterize_to_pixels_fwd.cu  structs.h
